# alg-trading

./: README.md  alg_trading_mean_reverse.ipynb  pyproject.toml  test_yfinance_mean_reg.ipynb
